--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,10 +34,10 @@ dependencies {
     compile "com.jakewharton:butterknife:$BUTTERKNIFE"
     annotationProcessor "com.jakewharton:butterknife-compiler:$BUTTERKNIFE"
 
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support:support-v4:26.+'
-    compile 'com.android.support:design:26.+'
-    testCompile 'junit:junit:4.12'
+    final SUPPORT_VERSION = "26.0.1"
+    compile "com.android.support:appcompat-v7:$SUPPORT_VERSION"
+    compile "com.android.support:support-v4:$SUPPORT_VERSION"
+    compile "com.android.support:design:$SUPPORT_VERSION"
 
     compile 'com.romandanylyk:pageindicatorview:0.2.0@aar'
     compile group: 'com.github.bumptech.glide', name: 'glide', version: '3.7.0'
